
- Added Register and Marker dockables (Nicholas O'Leary).

- "Rectangular Selection" command now changes the state of the current
  selection to match the flag.

- "Select All" preserves current scroll position.

- When closing jEdit, open buffers are not added to the "Recent Files"
  list if the "Restore previously open files on startup" option is on.

}}}
{{{ Bug Fixes

- "Backup directory" feature now works if the file being edited is on a
  different filesystem than the backup directory (Marcelo Vanzin).

- Don't use two-stage save if the file's parent directory is not
  writeable (Marcelo Vanzin).

- Minor fix for handling of the recent buffer when the current buffer
  was closed.

- Fix StringIndexOutOfBoundsException when opening files with a
  malformed XML PI.

- Removing open files from the favorites list didn't work.

- calling readNextChar() no longer clears the status bar after the
  script returns.

- Fix potential ArrayIndexOutOfBoundsException when indenting lines
  containing unmatched brackets.

- Macros written in the UTF-8Y and UTF-16 encodings are auto-detected.

}}}
{{{ API Changes

- Removed EditPlugin.JAR, deprecated since 4.2.

- New org.gjt.sp.jedit.gui.HistoryTextArea class can be used by
  plugins.

}}}

}}}

{{{ Version 4.2final

Thanks to Brant Gurganus, Justin Dieters, Ollie Rutherfurd and Thomas
Bock for contributing to this release.

{{{ Syntax Highlighting

- Added Factor syntax highlighting.

- Updated BBj syntax highlighting (Thomas Bock).

- Added ANTLR syntax highlighting (Brant Gurganus).

- Added D syntax highlighting (Jim Lawton).

- Added INNO setup syntax highlighting (Ollie Rutherfurd).

- Added Doxygen syntax highlighting. This includes doxyfile*
  configuration files, and Doxygen comments in C, C++, Objective-C and
  D modes. (Jim Lawton)

}}}
{{{ Scripting

- Some new clipboard macros (Ollie Rutherfurd).

}}}
{{{ Bug Fixes

- Fix a roundoff error in the monospaced font optimization that would